Revision history for Perl extension Monitoring::Generator::TestConfig.

0.27  Sat Feb 20 20:29:17 CET 2010
	added shinken layout
    fixed tests for windows

0.26  Fri Jan  8 11:13:16 CET 2010
	fixed way of searching for binarys
	fixed config test when there is no binary found

0.24  Wed Jan  6 17:38:04 CET 2010
	renamed to Monitoring::Generator::TestConfig
	added switch to set layout (nagios/icinga for the moment)

0.22  Tue Jan  5 21:09:50 CET 2010
	fixed host/service config
	fixed problem with newlines in resource.cfg

0.20  Sun Dec 13 00:55:33 CET 2009
	added init script
	added prefix option

0.18  Sat Dec  5 15:33:10 CET 2009
	added support for parent router

0.16  Wed Dec  2 11:39:50 CET 2009
	added large installation tweaks for installations > 2000 services

0.15  Sun Nov 15 16:56:04 CET 2009
	- added possibility to override all host / service settings
	- rewritten host / service plugins in perl
	- moved service / hostplugin data to extra module
	- added sample host / servicegroups
	- added possibility to set types of hosts/services

0.14  Fri Nov 13 21:42:55 CET 2009
	- added possibility to override all nagios.cfg settings
	- added Test::Perl::Critic tests
	- added Test::Pod::Coverage tests

0.13  Tue Nov 10 09:35:29 CET 2009
	- fixed tests, now uses File::Which

0.12  Sat Nov  7 14:37:37 CET 2009
	- changed way of passing options

0.11  Thu Nov  5 23:57:17 CET 2009
	- fixed tests on solaris

0.10  Wed Nov  4 20:15:25 CET 2009
	- initial release, generates working nagios config

0.01  Tue Nov  3 18:45:19 2009
	- original version; created by h2xs 1.23 with options
		-A -X -n Nagios::Generator::TestConfig