@@ -1,5 +1,4 @@
-package # hidden from cpan
-    Monitoring::Generator::TestConfig::ServiceCheckData;
+package Monitoring::Generator::TestConfig::ServiceCheckData;
 
 use 5.000000;
 use strict;
@@ -219,6 +218,7 @@ sub do_check {
                 my $sleep = 5 + int(rand(20));
                 sleep($sleep);
                 print "$host_desc CRITICAL: random $servicedesc critical\n";
+                print "sometimes with multiline and <b>html tags</b>\n";
                 exit 2;
             }
             # 30% chance for a warning
@@ -227,11 +227,13 @@ sub do_check {
                 my $sleep = 5 + int(rand(20));
                 sleep($sleep);
                 print "$host_desc WARNING: random $servicedesc warning\n";
+                print "sometimes with multiline and <b>html tags</b>\n";
                 exit 1;
             }
 
             # 10% chance for a unknown
             print "$host_desc UNKNOWN: random $servicedesc unknown\n";
+            print "sometimes with multiline and <b>html tags</b>\n";
             exit 3;
         }
     }
